Unexpected "Out of memory" error for "x".repeat(-1) https://bugs.webkit.org/show_bug.cgi?id=159529

Patch by Joseph Pecoraro <pecoraro@apple.com> on 2016-07-07
Reviewed by Benjamin Poulain.

Source/JavaScriptCore:

* builtins/StringPrototype.js:
(globalPrivate.repeatSlowPath):
(repeat):
Move the @toInteger and range checking to the always path,
since the spec does say it should always happen. Also remove
the duplication of the fast path here.

* runtime/StringPrototype.cpp:
(JSC::repeatCharacter):
Remove unused function.

(JSC::stringProtoFuncRepeatCharacter):
ASSERT if given a negative number. This is a private function
only used internally.

* tests/stress/string-repeat-edge-cases.js:
(shouldThrow):
Update expected error message.

LayoutTests:

Extended test coverage for:

  - function properties
  - fast path with invalid counts
  - observable side effects for fast path which were wrong before

* js/script-tests/string-repeat.js:
* js/string-repeat-expected.txt:

Canonical link: https://commits.webkit.org/177678@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@202954 268f45cc-cd09-0410-ab3c-d52691b4dbfc