Source/JavaScriptCore/builtins/StringPrototype.js
@@ -51,35 +51,26 @@ function repeatSlowPath(string, count)
 {
     "use strict";
 
-    var repeatCount = @toInteger(count);
-    if (repeatCount < 0 || repeatCount === @Infinity)
-        throw new @RangeError("String.prototype.repeat argument must be greater than or equal to 0 and not be infinity");
-
     // Return an empty string.
-    if (repeatCount === 0 || string.length === 0)
+    if (count === 0 || string.length === 0)
         return "";
 
     // Return the original string.
-    if (repeatCount === 1)
+    if (count === 1)
         return string;
 
-    if (string.length * repeatCount > @MAX_STRING_LENGTH)
+    if (string.length * count > @MAX_STRING_LENGTH)
         throw new @Error("Out of memory");
 
-    if (string.length === 1) {
-        // Here, |repeatCount| is always Int32.
-        return @repeatCharacter(string, repeatCount);
-    }
-
-    // Bit operation onto |repeatCount| is safe because |repeatCount| should be within Int32 range,
+    // Bit operation onto |count| is safe because |count| should be within Int32 range,
     // Repeat log N times to generate the repeated string rope.
     var result = "";
     var operand = string;
     while (true) {
-        if (repeatCount & 1)
+        if (count & 1)
             result += operand;
-        repeatCount >>= 1;
-        if (!repeatCount)
+        count >>= 1;
+        if (!count)
             return result;
         operand += operand;
     }
@@ -121,6 +112,11 @@ function repeat(count)
     }
 
     var string = @toString(this);
+    count = @toInteger(count);
+
+    if (count < 0 || count === @Infinity)
+        throw new @RangeError("String.prototype.repeat argument must be greater than or equal to 0 and not be Infinity");
+
     if (string.length === 1) {
         var result = @repeatCharacter(string, count);
         if (result !== null)
